mise a jour des projets

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -209,7 +209,7 @@
                             {# project 2 #}
                             <div class="max-w-xs w-full">
                                 <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <img class="" src="{{ asset('images/projects/EniEncheres.PNG') }}" alt="ENI-Encheres">
+                                    <img class="" src="{{ asset('images/projects/ENI-sortir.png') }}" alt="ENI-Encheres">
                                 </div>
 
                                 <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
@@ -225,14 +225,14 @@
                             {# project 3 #}
                             <div class="max-w-xs w-full">
                                 <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <img class="" src="{{ asset('images/projects/EniEncheres.PNG') }}" alt="ENI-Encheres">
+                                    <img class="" src="{{ asset('images/projects/uniwave.png') }}" alt="ENI-Encheres">
                                 </div>
 
                                 <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
                                     <div class="py-2 px-3 text-center text-sm">
-                                        <p class="text-gray-300">ENI-Enchères.</p>
-                                        <p class="text-gray-300">Site de ventes aux enchères d'objets de seconde main.
-                                            <br> Réalisé dans le cadre de ma formation.
+                                        <p class="text-gray-300">Uniwave-3D.</p>
+                                        <p class="text-gray-300">Site de vente de services pour artistes.
+                                            <br> Réalisé dans le cadre de mon stage de fin de formation.
                                         </p>
                                     </div>
                                 </a>
