--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -115,39 +115,110 @@
                 </div>
             </section>
 
-            <section class="bg-gray-800 pattern py-5">
+            <section class="Comp-title pattern">
                 <div class="max-w-5xl px-6 mx-auto text-center">
                     <h2 class="text-2xl font-semibold text-white">Compétences</h2>
                 </div>
             </section>
 
             <section class="pattern flex">
-                <div class="w-1/2 h-auto">
+                <div class="competences">
                     <!-- component -->
-                    <div class="w-full p-2">
+                    <div class="progressBar OVERVIEW">
+                        <p>
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+                            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
+                            ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
+                            consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                        </p>
+                    </div>
+
+                    <div class="progressBar AGILE hidden">
                         <span>Front-end</span>
                         <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
-                    <div class="w-full p-2">
+                    <div class="progressBar THREE.JS hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar HTML hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar SQL hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar BOOTSTRAP hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar PYTHON hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar API hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar CSS hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar JAVASCRIPT hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar TAILWIND hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar GIT hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar REACT hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar ANGULAR hidden">
+                        <span>Front-end</span>
+                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                    </div>
+
+                    <div class="progressBar JAVA hidden">
                         <span>Front-end</span>
                         <div class="bg-teal-400 text-xs leading-none text-center h-1" style="width: 55%"></div>
                     </div>
 
-                    <div class="w-full p-2">
+                    <div class="progressBar SYMFONY hidden">
                         <span>Front-end</span>
                         <div class="bg-red-600 text-xs leading-none text-center h-1" style="width: 65%"></div>
                     </div>
 
-                    <div class="w-full p-2">
+                    <div class="progressBar PHP hidden">
                         <span>Front-end</span>
                         <div class="bg-fuchsia-500 text-xs leading-none text-center h-1" style="width: 75%"></div>
                     </div>
-                    <div></div>
                 </div>
 
                 {# sphere #}
-                <div class="w-1/2 h-auto">
+                <div class="spheriComp">
                     <span class="Sphere"></span>
                     <!-- Including the TagCloud.js script CDN in the document    -->
                     <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"> </script>                    <script>
@@ -164,7 +235,7 @@
                             // animation speed
                             // slow, normal, fast
                             maxSpeed: 'slow',
-                            initSpeed: 'normal',
+                            initSpeed: 'slow',
                             // Rolling direction [0 (top) , 90 (left), 135 (right-bottom)]
                             direction: 135,
                             // interaction with mouse or not [Default true (decelerate to rolling init speed, and keep rolling with mouse).]
@@ -175,6 +246,33 @@
                         var font_size = 'bold';
                         document.querySelector('.Sphere').style.color = color;
                         document.querySelector('.Sphere').style.fontWeight = font_size;
+
+                        // select compétence pour l'afficher
+                        let rootEl = document.querySelector('.Sphere');
+                        let onPause = false;
+                        rootEl.addEventListener('click', function clickEventHandler(e) {
+                            var clickedTechno = e.target.innerHTML;
+                            var progressBar = document.querySelectorAll(".progressBar");
+
+                            for (i=0; i < progressBar.length; i++) {
+                                if(progressBar[i].classList.contains(clickedTechno)){
+                                    progressBar[i].classList.remove("hidden")
+                                } else {
+                                    progressBar[i].classList.add("hidden");
+                                }
+                            }
+
+                            //met en pause/resume la rotation
+                            if (e.target.className === 'tagcloud--item') {
+                                if (onPause === true) {
+                                    tagCloud.resume();
+                                    onPause = false;
+                                } else if (onPause === false){
+                                    tagCloud.pause();
+                                    onPause = true;
+                                }
+                            }
+                        });
                     </script>
                 </div>
             </section>
@@ -183,9 +281,9 @@
                 <div class="max-w-5xl px-6 mx-auto text-center">
                     <h2 class="text-2xl font-semibold text-white">Projects</h2>
 
-                    <p class="text-white mt-4">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
+{#                    <p class="text-white mt-4">#}
+{#                        Lorem ipsum dolor sit amet consectetur adipisicing elit.#}
+{#                    </p>#}
 
                     <div class="flex items-center justify-center mt-10">
                         <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3">
@@ -217,6 +315,54 @@
                                         <p class="text-gray-300">ENI-Enchères.</p>
                                         <p class="text-gray-300">Site d'organisation de sorties.
                                             <br> Réalisé dans le cadre de ma formation.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            {# project 3 #}
+                            <div class="max-w-xs w-full">
+                                <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                                    <img class="" src="{{ asset('images/projects/uniwave.png') }}" alt="ENI-Encheres">
+                                </div>
+
+                                <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                                    <div class="py-2 px-3 text-center text-sm">
+                                        <p class="text-gray-300">Uniwave-3D.</p>
+                                        <p class="text-gray-300">Site de vente de services pour artistes.
+                                            <br> Réalisé dans le cadre de mon stage de fin de formation.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            {# project 3 #}
+                            <div class="max-w-xs w-full">
+                                <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                                    <img class="" src="{{ asset('images/projects/uniwave.png') }}" alt="ENI-Encheres">
+                                </div>
+
+                                <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                                    <div class="py-2 px-3 text-center text-sm">
+                                        <p class="text-gray-300">Uniwave-3D.</p>
+                                        <p class="text-gray-300">Site de vente de services pour artistes.
+                                            <br> Réalisé dans le cadre de mon stage de fin de formation.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            {# project 3 #}
+                            <div class="max-w-xs w-full">
+                                <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                                    <img class="" src="{{ asset('images/projects/uniwave.png') }}" alt="ENI-Encheres">
+                                </div>
+
+                                <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                                    <div class="py-2 px-3 text-center text-sm">
+                                        <p class="text-gray-300">Uniwave-3D.</p>
+                                        <p class="text-gray-300">Site de vente de services pour artistes.
+                                            <br> Réalisé dans le cadre de mon stage de fin de formation.
                                         </p>
                                     </div>
                                 </a>
