--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -137,82 +137,82 @@
                     </div>
 
                     <div class="progressBar AGILE hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>AGILE</span>
+                        <div class="bg-red-200 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar THREE.JS hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>THREE.JS</span>
+                        <div class="bg-red-500 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar HTML hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>HTML</span>
+                        <div class="bg-orange-200 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar SQL hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>SQL</span>
+                        <div class="bg-orange-500 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar BOOTSTRAP hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>BOOTSTRAP</span>
+                        <div class="bg-amber-200 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar PYTHON hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>PYTHON</span>
+                        <div class="bg-yellow-600 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar API hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>API</span>
+                        <div class="bg-lime-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar CSS hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>CSS</span>
+                        <div class="bg-green-300 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar JAVASCRIPT hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>JAVASCRIPT</span>
+                        <div class="bg-green-800 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar TAILWIND hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>TAILWIND</span>
+                        <div class="bg-teal-300 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar GIT hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>GIT</span>
+                        <div class="bg-cyan-300 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar REACT hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>REACT</span>
+                        <div class="bg-cyan-800 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar ANGULAR hidden">
-                        <span>Front-end</span>
-                        <div class="bg-green-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
+                        <span>ANGULAR</span>
+                        <div class="bg-sky-400 text-xs leading-none text-center h-1" style="width: 45%"></div>
                     </div>
 
                     <div class="progressBar JAVA hidden">
-                        <span>Front-end</span>
-                        <div class="bg-teal-400 text-xs leading-none text-center h-1" style="width: 55%"></div>
+                        <span>JAVA</span>
+                        <div class="bg-blue-400 text-xs leading-none text-center h-1" style="width: 55%"></div>
                     </div>
 
                     <div class="progressBar SYMFONY hidden">
-                        <span>Front-end</span>
-                        <div class="bg-red-600 text-xs leading-none text-center h-1" style="width: 65%"></div>
+                        <span>SYMFONY</span>
+                        <div class="bg-blue-800 text-xs leading-none text-center h-1" style="width: 65%"></div>
                     </div>
 
                     <div class="progressBar PHP hidden">
-                        <span>Front-end</span>
+                        <span>PHP</span>
                         <div class="bg-fuchsia-500 text-xs leading-none text-center h-1" style="width: 75%"></div>
                     </div>
                 </div>
@@ -335,55 +335,6 @@
                                     </div>
                                 </a>
                             </div>
-
-                            {# project 3 #}
-                            <div class="max-w-xs w-full">
-                                <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <img class="" src="{{ asset('images/projects/uniwave.png') }}" alt="ENI-Encheres">
-                                </div>
-
-                                <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <div class="py-2 px-3 text-center text-sm">
-                                        <p class="text-gray-300">Uniwave-3D.</p>
-                                        <p class="text-gray-300">Site de vente de services pour artistes.
-                                            <br> Réalisé dans le cadre de mon stage de fin de formation.
-                                        </p>
-                                    </div>
-                                </a>
-                            </div>
-
-                            {# project 3 #}
-                            <div class="max-w-xs w-full">
-                                <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <img class="" src="{{ asset('images/projects/uniwave.png') }}" alt="ENI-Encheres">
-                                </div>
-
-                                <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <div class="py-2 px-3 text-center text-sm">
-                                        <p class="text-gray-300">Uniwave-3D.</p>
-                                        <p class="text-gray-300">Site de vente de services pour artistes.
-                                            <br> Réalisé dans le cadre de mon stage de fin de formation.
-                                        </p>
-                                    </div>
-                                </a>
-                            </div>
-
-                            {# project 3 #}
-                            <div class="max-w-xs w-full">
-                                <div class="flex items-center justify-center h-56 bg-white border-b-8 border-teal-400 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <img class="" src="{{ asset('images/projects/uniwave.png') }}" alt="ENI-Encheres">
-                                </div>
-
-                                <a href="#" class="block bg-gray-700 mt-5 rounded-md overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-                                    <div class="py-2 px-3 text-center text-sm">
-                                        <p class="text-gray-300">Uniwave-3D.</p>
-                                        <p class="text-gray-300">Site de vente de services pour artistes.
-                                            <br> Réalisé dans le cadre de mon stage de fin de formation.
-                                        </p>
-                                    </div>
-                                </a>
-                            </div>
-
                         </div>
                     </div>
 
