Ajout shadow aux progressBar

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -76,7 +76,7 @@
                         <div class="ligne"></div>
 
                         <div class="rond r1">
-                            <h2 class="text-white">2021</h2>
+                            <h2 class="text-white">2022 - 2021</h2>
                         </div>
                         <div class="rond r2">
                             <h2 class="text-white">2020 - 2017</h2>
@@ -92,7 +92,10 @@
                         </div>
 
                         <div class="box b0 reveal">
-                            <h2>Master en psycho-criminologie et victimologie</h2>
+                            <h2>Formation Java Spring Mulesoft</h2>
+                            <p>
+                                AJC Classroom
+                            </p>
                         </div>
                         <div class="box b1 reveal">
                             <h2>Développeur web & web mobile</h2>
@@ -103,15 +106,27 @@
                         </div>
                         <div class="box b2 reveal">
                             <h2>Master en psycho-criminologie et victimologie</h2>
+                            <p>
+                                Université Rennes 2.
+                            </p>
                         </div>
                         <div class="box b3 reveal">
                             <h2>Médiateur social</h2>
+                            <p>
+                                Ligue de l'enseignement du Cher (18).
+                            </p>
                         </div>
                         <div class="box b4 reveal">
                             <h2>Service civique</h2>
+                            <p>
+                                Ligue de l'enseignement du Cher (18).
+                            </p>
                         </div>
                         <div class="box b5 reveal">
                             <h2>Licence en psychologie</h2>
+                            <p>
+                                Université de Louvain-la-Neuve (Belgique)
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -135,7 +150,9 @@
 
                     <div class="progressBar AGILE hidden">
                         <span>AGILE</span>
-                        <div class="bg-red-200 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        <div class="shadow w-full bg-grey-800">
+                            <div class="bg-red-200 text-xs leading-none shadow text-center h-1" style="width: 75%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage de la méthode Agile au cours de ma formation de développeur web.
@@ -148,7 +165,9 @@
 
                     <div class="progressBar THREE.JS hidden">
                         <span>THREE.JS</span>
-                        <div class="bg-red-500 text-xs leading-none text-center h-1" style="width: 15%"></div>
+                        <div class="shadow w-full bg-grey-800">
+                            <div class="bg-red-500 text-xs leading-none text-center h-1" style="width: 15%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage en autodidacte de Three.js (en cours).
@@ -195,7 +214,9 @@
 
                     <div class="progressBar HTML hidden">
                         <span>HTML</span>
-                        <div class="bg-orange-200 text-xs leading-none text-center h-1" style="width: 80%"></div>
+                        <div class="shadow w-full bg-grey-800">
+                            <div class="bg-orange-200 text-xs leading-none text-center h-1" style="width: 80%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage en autodidacte des bases du HTML via la plateforme OpenClassroom et perfectionnement au cours de ma formation de développeur web..
@@ -206,7 +227,9 @@
 
                     <div class="progressBar SQL hidden">
                         <span>SQL</span>
-                        <div class="bg-orange-500 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        <div class="shadow w-full bg-grey-800">
+                            <div class="bg-orange-500 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage au cours de ma formation de développeur web, j'ai acquis de bonnes connaissances
@@ -216,7 +239,9 @@
 
                     <div class="progressBar BOOTSTRAP hidden">
                         <span>BOOTSTRAP</span>
-                        <div class="bg-amber-200 text-xs leading-none text-center h-1" style="width: 65%"></div>
+                        <div class="shadow w-full bg-grey-800">
+                            <div class="bg-amber-200 text-xs leading-none text-center h-1" style="width: 65%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage au cours de ma formation de développeur web, je lui préfère TailwindCSS
@@ -225,7 +250,9 @@
 
                     <div class="progressBar PYTHON hidden">
                         <span>PYTHON</span>
-                        <div class="bg-yellow-600 text-xs leading-none text-center h-1" style="width: 15%"></div>
+                        <div class="shadow w-full bg-grey-800">
+                            <div class="bg-yellow-600 text-xs leading-none text-center h-1" style="width: 15%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage en autodidacte, je m'intéresse au Machine Learning et au Data Analysis avec Python.
@@ -234,7 +261,9 @@
 
                     <div class="progressBar API hidden">
                         <span>API</span>
-                        <div class="bg-lime-400 text-xs leading-none text-center h-1" style="width: 70%"></div>
+                        <div class="shadow w-full bg-grey-800">
+                            <div class="bg-lime-400 text-xs leading-none text-center h-1" style="width: 70%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Que serait le web sans API?
@@ -243,7 +272,9 @@
 
                     <div class="progressBar CSS hidden">
                         <span>CSS</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-green-300 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage en autodidacte des bases du CSS via la plateforme OpenClassroom et perfectionnement au cours de ma formation de développeur web.
@@ -254,7 +285,9 @@
 
                     <div class="progressBar JAVASCRIPT hidden">
                         <span>JAVASCRIPT</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-green-800 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Plutot frilleux au début, j'ai appris a apprécier ce langage et m'amuse aujourd'hui a explorer les nombreuses possibilités qu'il offre.
@@ -263,7 +296,9 @@
 
                     <div class="progressBar TAILWIND hidden">
                         <span>TAILWIND</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-teal-300 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage autodidacte dans le cadre de mon stage.
@@ -273,7 +308,9 @@
 
                     <div class="progressBar GIT hidden">
                         <span>GIT</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-cyan-300 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             L'indispensable outils du développeur.
@@ -282,7 +319,9 @@
 
                     <div class="progressBar REACT hidden">
                         <span>REACT</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-cyan-800 text-xs leading-none text-center h-1" style="width: 35%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage autodidacte au cours de mon stage. Je n'ai pas eu l'occasion depuis de le réutiliser.
@@ -291,7 +330,9 @@
 
                     <div class="progressBar ANGULAR hidden">
                         <span>ANGULAR</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-sky-400 text-xs leading-none text-center h-1" style="width: 65%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Apprentissage au cours de ma formation de développeur web, j'ai acquis de bonnes connaissances
@@ -301,7 +342,9 @@
 
                     <div class="progressBar JAVA hidden">
                         <span>JAVA</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-blue-400 text-xs leading-none text-center h-1" style="width: 80%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Mon premier coup de coeur.<br>
@@ -311,7 +354,9 @@
 
                     <div class="progressBar SYMFONY hidden">
                         <span>SYMFONY</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-blue-800 text-xs leading-none text-center h-1" style="width: 85%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Mon second coup de coeur. J'ai pris beaucoup de plaisir à travailler sur symfony au cours de mon stage.
@@ -320,7 +365,9 @@
 
                     <div class="progressBar PHP hidden">
                         <span>PHP</span>
+                        <div class="shadow w-full bg-grey-800">
                         <div class="bg-fuchsia-500 text-xs leading-none text-center h-1" style="width: 75%"></div>
+                        </div>
                         <p class="comp-description">
                             <br>
                             Un indispensable.
