Ajout color link

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -94,7 +94,7 @@
                         <div class="box b0 reveal">
                             <h2>Formation Java Spring Mulesoft</h2>
                             <p>
-                                AJC Classroom
+                                <a href="https://www.ajc-formation.fr/filiere/poe/50/java.html"> AJC Classroom</a>
                             </p>
                         </div>
                         <div class="box b1 reveal">
@@ -107,25 +107,25 @@
                         <div class="box b2 reveal">
                             <h2>Master en psycho-criminologie et victimologie</h2>
                             <p>
-                                Université Rennes 2.
+                                <a href="https://formations.univ-rennes2.fr/fr/formations/master-37/master-mention-psychologie-clinique-psychopathologie-et-psychologie-de-la-sante-JFTHNTVT//parcours-violences-risques-vulnerabilites-JFTHRMMG.html">Université Rennes 2.</a>
                             </p>
                         </div>
                         <div class="box b3 reveal">
                             <h2>Médiateur social</h2>
                             <p>
-                                Ligue de l'enseignement du Cher (18).
+                                <a href="https://www.laliguedelenseignement-18.fr/">Ligue de l'enseignement du Cher (18).</a>
                             </p>
                         </div>
                         <div class="box b4 reveal">
                             <h2>Service civique</h2>
                             <p>
-                                Ligue de l'enseignement du Cher (18).
+                                <a href="https://www.laliguedelenseignement-18.fr/">Ligue de l'enseignement du Cher (18).</a>
                             </p>
                         </div>
                         <div class="box b5 reveal">
                             <h2>Licence en psychologie</h2>
                             <p>
-                                Université de Louvain-la-Neuve (Belgique)
+                                <a href="https://uclouvain.be/prog-2021-psp1ba"> Université de Louvain-la-Neuve (Belgique)</a>
                             </p>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                             <br>
                             Apprentissage en autodidacte de Three.js (en cours).
                             <br>
-                            <br> Scène, moteur graphique/physique, caméra, lumières, meshes, shaders... bienvenue dans le monde merveilleux de la 3D.
+                            <br> Scène, moteur graphique/physique, caméra, lumières, meshes, shaders... Bienvenue dans le monde merveilleux de la 3D.
                             Tout cela est encore du chinois mais n'aura bientot plus de secret pour moi (enfin je l'espère).
                             Ci-dessous, un "simple" cube que j'ai réalisé.
 
@@ -255,7 +255,7 @@
                         </div>
                         <p class="comp-description">
                             <br>
-                            Apprentissage en autodidacte, je m'intéresse au Machine Learning et au Data Analysis avec Python.
+                            Apprentissage en autodidacte, je m'intéresse au Machine Learning et au Big Data avec Python.
                         </p>
                     </div>
 
@@ -324,7 +324,7 @@
                         </div>
                         <p class="comp-description">
                             <br>
-                            Apprentissage autodidacte au cours de mon stage. Je n'ai pas eu l'occasion depuis de le réutiliser.
+                            Apprentissage autodidacte au cours de mon stage.
                         </p>
                     </div>
 
@@ -336,7 +336,7 @@
                         <p class="comp-description">
                             <br>
                             Apprentissage au cours de ma formation de développeur web, j'ai acquis de bonnes connaissances
-                            de ce framework bien que je ne l'utilise pas souvent.
+                            de ce framework.
                         </p>
                     </div>
 
@@ -532,9 +532,9 @@
 {#                            </a>#}
 
                         {# Discord #}
-                            <a class="flex items-center mx-2 text-gray-600 hover:text-indigo-600" href="kysara#8842">
-                                <svg class="h-5 w-5 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
-                                    <path d='M256,32C132.3,32,32,134.9,32,261.7c0,101.5,64.2,187.5,153.2,217.9a17.56,17.56,0,0,0,3.8.4c8.3,0,11.5-6.1,11.5-11.4,0-5.5-.2-19.9-.3-39.1a102.4,102.4,0,0,1-22.6,2.7c-43.1,0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1,1.4-14.1h.1c22.5,2,34.3,23.8,34.3,23.8,11.2,19.6,26.2,25.1,39.6,25.1a63,63,0,0,0,25.6-6c2-14.8,7.8-24.9,14.2-30.7-49.7-5.8-102-25.5-102-113.5,0-25.1,8.7-45.6,23-61.6-2.3-5.8-10-29.2,2.2-60.8a18.64,18.64,0,0,1,5-.5c8.1,0,26.4,3.1,56.6,24.1a208.21,208.21,0,0,1,112.2,0c30.2-21,48.5-24.1,56.6-24.1a18.64,18.64,0,0,1,5,.5c12.2,31.6,4.5,55,2.2,60.8,14.3,16.1,23,36.6,23,61.6,0,88.2-52.4,107.6-102.3,113.3,8,7.1,15.2,21.1,15.2,42.5,0,30.7-.3,55.5-.3,63,0,5.4,3.1,11.5,11.4,11.5a19.35,19.35,0,0,0,4-.4C415.9,449.2,480,363.1,480,261.7,480,134.9,379.7,32,256,32Z'/>
+                            <a class="discord flex items-center mx-2 text-gray-600 hover:text-indigo-600" href="#">
+                                <svg class="h-6 w-6 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 1000'>
+                                    <path d=" M 386 203C 387 203 388 203 388 203C 388 203 395 212 395 212C 267 248 209 304 209 304C 209 304 224 296 250 284C 326 250 386 241 411 239C 415 238 419 238 423 238C 466 232 515 231 566 236C 633 244 705 264 779 304C 779 304 723 251 603 214C 603 214 612 203 612 203C 612 203 709 201 811 277C 811 277 913 462 913 689C 913 689 853 792 697 797C 697 797 671 767 650 740C 743 714 778 656 778 656C 749 675 721 688 697 697C 661 712 627 722 594 728C 526 740 464 737 411 727C 371 719 336 708 307 697C 291 690 273 682 255 673C 253 671 251 670 249 669C 248 668 247 668 246 667C 233 660 226 655 226 655C 226 655 260 711 350 738C 329 765 303 797 303 797C 146 792 87 689 87 689C 87 462 189 277 189 277C 284 206 375 203 386 203C 386 203 386 203 386 203M 368 467C 327 467 296 502 296 545C 296 588 328 624 368 624C 408 624 440 588 440 545C 441 502 408 467 368 467C 368 467 368 467 368 467M 626 467C 586 467 554 502 554 545C 554 588 586 624 626 624C 666 624 698 588 698 545C 698 502 666 467 626 467C 626 467 626 467 626 467"/>
                                 </svg>
                             </a>
                         </div>
