--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,12 +22,32 @@
         }
     </style>
 
-    <main class="font-sans bg-white">
+    <main class="font-sans pattern">
         <div>
-            <header class="bg-white shadow">
-                <div class="container mx-auto px-6 py-4">
-                    <div class="flex items-center justify-between">
+            <header class="shadow">
+                <!-- component -->
+                <div class="pattern">
+                    <div class="antialiased bg-gray-100 dark-mode:bg-gray-900">
+                        <div class="w-full text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800">
 
+                            <nav class="flex-col flex-grow pb-4 md:pb-0 md:flex md:justify-end md:flex-row">
+                                <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#about">
+                                    A propos de moi
+                                </a>
+                                <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#parcours">
+                                    Mon parcours
+                                </a>
+                                <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#competences">
+                                    Compétences
+                                </a>
+                                <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#portfolio">
+                                    Portfolio
+                                </a>
+                                <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#contact">
+                                    Contact
+                                </a>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -47,7 +67,7 @@
 
             <section class="bg-gray-800 pattern py-20">
                 <div class="max-w-5xl px-6 mx-auto text-center">
-                    <h2 class="text-2xl font-semibold text-white">A propos de moi</h2>
+                    <h2 id="about" class="text-2xl font-semibold text-white">A propos de moi</h2>
 
                     <p class="text-white mt-4">
                         Récemment issu d'une formation de reconversion dans le développement web, je suis à la recherche d'un premier poste. <br>
@@ -67,7 +87,7 @@
             <section class="bg-white pattern py-20">
                 <div class="max-w-5xl px-6 mx-auto text-center">
 
-                    <h2 class="text-2xl font-semibold text-gray-800">Mon parcours</h2>
+                    <h2 id="parcours" class="text-2xl font-semibold text-gray-800">Mon parcours</h2>
 
                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
@@ -134,7 +154,7 @@
 
             <section class="Comp-title pattern">
                 <div class="max-w-5xl px-6 mx-auto text-center">
-                    <h2 class="text-2xl font-semibold text-white">Compétences</h2>
+                    <h2 id="competences" class="text-2xl font-semibold text-white">Compétences</h2>
                 </div>
             </section>
 
@@ -436,7 +456,7 @@
 
             <section class="bg-gray-800 pattern py-20">
                 <div class="max-w-5xl px-6 mx-auto text-center">
-                    <h2 class="text-2xl font-semibold text-white">Projects</h2>
+                    <h2 id="portfolio" class="text-2xl font-semibold text-white">Projects</h2>
 
 {#                    <p class="text-white mt-4">#}
 {#                        Lorem ipsum dolor sit amet consectetur adipisicing elit.#}
@@ -508,7 +528,56 @@
                 </div>
             </section>
 
-            <footer class="bg-white">
+            <section class="pattern relative flex items-top justify-center sm:items-center sm:pt-0">
+                <div class="p-6 text-center items-center justify-center">
+                    <div class="max-w-5xl mx-auto text-center">
+                        <h2 id="contact" class="text-2xl font-semibold">Contact</h2>
+                    </div>
+
+                    {# Localisation #}
+                    <div class="flex items-center mt-8 text-gray-600 dark:text-gray-400">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+                        </svg>
+                        <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                            Rennes (35) - France
+                        </div>
+                    </div>
+
+                    {# Phone #}
+                    <div class="flex items-center mt-4 text-gray-600 dark:text-gray-400">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+                        </svg>
+                        <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                            +33 7 78 19 45 11
+                        </div>
+                    </div>
+
+                    {# Mail #}
+                    <div class="flex items-center mt-2 text-gray-600">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                        </svg>
+                        <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                            guillaume.carlier@hotmail.com
+                        </div>
+                    </div>
+
+                    {# Discord #}
+                    <div class="flex mt-2 text-gray-600">
+                        <svg class="h-8 w-8 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 1000'>
+                            <path d=" M 386 203C 387 203 388 203 388 203C 388 203 395 212 395 212C 267 248 209 304 209 304C 209 304 224 296 250 284C 326 250 386 241 411 239C 415 238 419 238 423 238C 466 232 515 231 566 236C 633 244 705 264 779 304C 779 304 723 251 603 214C 603 214 612 203 612 203C 612 203 709 201 811 277C 811 277 913 462 913 689C 913 689 853 792 697 797C 697 797 671 767 650 740C 743 714 778 656 778 656C 749 675 721 688 697 697C 661 712 627 722 594 728C 526 740 464 737 411 727C 371 719 336 708 307 697C 291 690 273 682 255 673C 253 671 251 670 249 669C 248 668 247 668 246 667C 233 660 226 655 226 655C 226 655 260 711 350 738C 329 765 303 797 303 797C 146 792 87 689 87 689C 87 462 189 277 189 277C 284 206 375 203 386 203C 386 203 386 203 386 203M 368 467C 327 467 296 502 296 545C 296 588 328 624 368 624C 408 624 440 588 440 545C 441 502 408 467 368 467C 368 467 368 467 368 467M 626 467C 586 467 554 502 554 545C 554 588 586 624 626 624C 666 624 698 588 698 545C 698 502 666 467 626 467C 626 467 626 467 626 467"/>
+                        </svg>
+                        <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                            kysara#8842
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <footer class="bg-white pattern">
                 <div class="container mx-auto px-6 py-4">
                     <div class="flex justify-between items-center">
                         <div>
@@ -521,20 +590,6 @@
                             <a class="flex items-center mx-2 text-gray-600 hover:text-indigo-600" href="https://github.com/JisatsuShiro">
                                 <svg class="h-5 w-5 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
                                     <path d='M256,32C132.3,32,32,134.9,32,261.7c0,101.5,64.2,187.5,153.2,217.9a17.56,17.56,0,0,0,3.8.4c8.3,0,11.5-6.1,11.5-11.4,0-5.5-.2-19.9-.3-39.1a102.4,102.4,0,0,1-22.6,2.7c-43.1,0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1,1.4-14.1h.1c22.5,2,34.3,23.8,34.3,23.8,11.2,19.6,26.2,25.1,39.6,25.1a63,63,0,0,0,25.6-6c2-14.8,7.8-24.9,14.2-30.7-49.7-5.8-102-25.5-102-113.5,0-25.1,8.7-45.6,23-61.6-2.3-5.8-10-29.2,2.2-60.8a18.64,18.64,0,0,1,5-.5c8.1,0,26.4,3.1,56.6,24.1a208.21,208.21,0,0,1,112.2,0c30.2-21,48.5-24.1,56.6-24.1a18.64,18.64,0,0,1,5,.5c12.2,31.6,4.5,55,2.2,60.8,14.3,16.1,23,36.6,23,61.6,0,88.2-52.4,107.6-102.3,113.3,8,7.1,15.2,21.1,15.2,42.5,0,30.7-.3,55.5-.3,63,0,5.4,3.1,11.5,11.4,11.5a19.35,19.35,0,0,0,4-.4C415.9,449.2,480,363.1,480,261.7,480,134.9,379.7,32,256,32Z'/>
-                                </svg>
-                            </a>
-
-                        {# Facebook #}
-{#                            <a class="flex items-center mx-2 text-gray-600 hover:text-indigo-600" href="#">#}
-{#                                <svg class="h-5 w-5 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>#}
-{#                                    <path d='M256,32C132.3,32,32,134.9,32,261.7c0,101.5,64.2,187.5,153.2,217.9a17.56,17.56,0,0,0,3.8.4c8.3,0,11.5-6.1,11.5-11.4,0-5.5-.2-19.9-.3-39.1a102.4,102.4,0,0,1-22.6,2.7c-43.1,0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1,1.4-14.1h.1c22.5,2,34.3,23.8,34.3,23.8,11.2,19.6,26.2,25.1,39.6,25.1a63,63,0,0,0,25.6-6c2-14.8,7.8-24.9,14.2-30.7-49.7-5.8-102-25.5-102-113.5,0-25.1,8.7-45.6,23-61.6-2.3-5.8-10-29.2,2.2-60.8a18.64,18.64,0,0,1,5-.5c8.1,0,26.4,3.1,56.6,24.1a208.21,208.21,0,0,1,112.2,0c30.2-21,48.5-24.1,56.6-24.1a18.64,18.64,0,0,1,5,.5c12.2,31.6,4.5,55,2.2,60.8,14.3,16.1,23,36.6,23,61.6,0,88.2-52.4,107.6-102.3,113.3,8,7.1,15.2,21.1,15.2,42.5,0,30.7-.3,55.5-.3,63,0,5.4,3.1,11.5,11.4,11.5a19.35,19.35,0,0,0,4-.4C415.9,449.2,480,363.1,480,261.7,480,134.9,379.7,32,256,32Z'/>#}
-{#                                </svg>#}
-{#                            </a>#}
-
-                        {# Discord #}
-                            <a class="discord flex items-center mx-2 text-gray-600 hover:text-indigo-600" href="#">
-                                <svg class="h-6 w-6 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 1000'>
-                                    <path d=" M 386 203C 387 203 388 203 388 203C 388 203 395 212 395 212C 267 248 209 304 209 304C 209 304 224 296 250 284C 326 250 386 241 411 239C 415 238 419 238 423 238C 466 232 515 231 566 236C 633 244 705 264 779 304C 779 304 723 251 603 214C 603 214 612 203 612 203C 612 203 709 201 811 277C 811 277 913 462 913 689C 913 689 853 792 697 797C 697 797 671 767 650 740C 743 714 778 656 778 656C 749 675 721 688 697 697C 661 712 627 722 594 728C 526 740 464 737 411 727C 371 719 336 708 307 697C 291 690 273 682 255 673C 253 671 251 670 249 669C 248 668 247 668 246 667C 233 660 226 655 226 655C 226 655 260 711 350 738C 329 765 303 797 303 797C 146 792 87 689 87 689C 87 462 189 277 189 277C 284 206 375 203 386 203C 386 203 386 203 386 203M 368 467C 327 467 296 502 296 545C 296 588 328 624 368 624C 408 624 440 588 440 545C 441 502 408 467 368 467C 368 467 368 467 368 467M 626 467C 586 467 554 502 554 545C 554 588 586 624 626 624C 666 624 698 588 698 545C 698 502 666 467 626 467C 626 467 626 467 626 467"/>
                                 </svg>
                             </a>
                         </div>
